--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 
     <properties>
         <rabbitmq.version>5.7.1</rabbitmq.version>
-        <kafka.version>2.3.1</kafka.version>
+        <kafka.version>2.4.0</kafka.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -96,6 +96,14 @@
             <artifactId>google-collections</artifactId>
             <version>1.0-rc2</version>
         </dependency>
+
+        <dependency>
+        <groupId>com.ibm.eventstreams.connect.avroconverter</groupId>
+        <artifactId>avroconverter</artifactId>
+        <version>1.0</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/src/main/resources/kafka-connect-avro-converter-1.0-SNAPSHOT-jar-with-dependencies.jar</systemPath>
+    </dependency>
 
     </dependencies>
 
