Migrated value schema to use byte body

--- a/config/connect-distributed.properties
+++ b/config/connect-distributed.properties
@@ -29,7 +29,7 @@ group.id=connect-cluster
 # need to configure these based on the format they want their data in when loaded from or stored into Kafka
 #key.converter=org.apache.kafka.connect.json.JsonConverter
 #value.converter=org.apache.kafka.connect.json.JsonConverter
-key.converter=com.ibm.eventstreams.connect.avroconverter.AvroConverter
+key.converter=null
 value.converter=com.ibm.eventstreams.connect.avroconverter.AvroConverter
 # Converter-specific settings can be passed in by prefixing the Converter's setting with the converter we want to apply
 # it to
