--- a/config/connect-standalone.properties
+++ b/config/connect-standalone.properties
@@ -27,6 +27,11 @@ value.converter=com.ibm.eventstreams.connect.avroconverter.AvroConverter
 key.converter.schemas.enable=true
 value.converter.schemas.enable=true
 
+internal.key.converter=org.apache.kafka.connect.json.JsonConverter
+internal.value.converter=org.apache.kafka.connect.json.JsonConverter
+internal.key.converter.schemas.enable=false
+internal.value.converter.schemas.enable=false
+
 offset.storage.file.filename=/tmp/connect.offsets
 # Flush much faster than normal, which is useful for testing/debugging
 offset.flush.interval.ms=10000
