sending body string

--- a/config/connect-distributed.properties
+++ b/config/connect-distributed.properties
@@ -29,7 +29,7 @@ group.id=connect-cluster
 # need to configure these based on the format they want their data in when loaded from or stored into Kafka
 #key.converter=org.apache.kafka.connect.json.JsonConverter
 #value.converter=org.apache.kafka.connect.json.JsonConverter
-key.converter=null
+key.converter=com.ibm.eventstreams.connect.avroconverter.AvroConverter
 value.converter=com.ibm.eventstreams.connect.avroconverter.AvroConverter
 # Converter-specific settings can be passed in by prefixing the Converter's setting with the converter we want to apply
 # it to
@@ -84,5 +84,4 @@ offset.flush.interval.ms=10000
 # b) uber-jars with plugins and their dependencies
 # c) directories immediately containing the package directory structure of classes of plugins and their dependencies
 # Examples: 
-# plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
-plugin.path=/usr/local/opt/jenv/versions/1.8.0.242
+plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
